--- a/타자게임.html
+++ b/타자게임.html
@@ -11,19 +11,40 @@
 	margin:auto;
 }
 #word_area{
-	height:100px;
-	line-height:100px;
+	height:150px;
+	line-height:150px;
 	background:dodgerblue;
 	color:#fff;
 	font-size:65px;
 	text-align:center;
+}
+.input_area{
+	width:100%;
+	height:100px;
+	background:red;
+}
+.input_area input{
+	width:98%;
+	font-size:50px;
+	height:90%;
+}
+#feedback{
+	width:100%;
+	height:150px;
+	background:green;
+}
+#score{
+	width:100%;
+	height:100px;
 }
 </style>
 </head>
 <body>
 	<div class="wrapper">
 		<h1 id="word_area">광화문</h1>
-		<div class="input_area"></div>
+		<div class="input_area">
+			<input type="text"/>
+		</div>
 		<div id="feedback"></div>
 		<div id="score"></div>
 	</div>
